use Peachpie Templates

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@
 /Server/Properties
 /Server/*.csproj
 /Server/*.md
-/Website/*.md
-/Website/bin
-/Website/obj
-/Website/Properties
-/Website/*.csproj
-/Website/vendor
-/Website/vendor74
-/Website/vendor82
+/flarum/*.md
+/flarum/bin
+/flarum/obj
+/flarum/Properties
+/flarum/*.csproj
+/flarum/vendor
+/flarum/vendor74
+/flarum/vendor82
