--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "flarum"]
 	path = flarum
-	url = https://github.com/flarum/flarum.git
+	url = https://github.com/xiangyi-wang/flarum.git
